@@ -13,10 +13,12 @@ import com.hbm.lib.Library;
 import com.hbm.main.MainRegistry;
 import com.hbm.packet.toclient.AuxParticlePacketNT;
 import com.hbm.particle.helper.CasingCreator;
-import com.hbm.render.amlfrom1710.Vec3;
 import com.hbm.tileentity.IGUIProvider;
-import com.hbm.util.Vec3dUtil;
+import com.hbm.util.Vec3NT;
 import io.netty.buffer.ByteBuf;
+import li.cil.oc.api.machine.Arguments;
+import li.cil.oc.api.machine.Callback;
+import li.cil.oc.api.machine.Context;
 import net.minecraft.client.gui.GuiScreen;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.inventory.Container;
@@ -27,6 +29,7 @@ import net.minecraft.util.NonNullList;
 import net.minecraft.util.SoundCategory;
 import net.minecraft.util.math.Vec3d;
 import net.minecraft.world.World;
+import net.minecraftforge.fml.common.Optional;
 import net.minecraftforge.fml.common.network.NetworkRegistry.TargetPoint;
 import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
@@ -53,8 +56,7 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
     @SideOnly(Side.CLIENT)
     public List<ItemStack> getAmmoTypesForDisplay() {
 
-        if (ammoStacks != null)
-            return ammoStacks;
+        if (ammoStacks != null) return ammoStacks;
 
         ammoStacks = new ArrayList<>();
 
@@ -67,7 +69,7 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
 
     @Override
     protected List<Integer> getAmmoList() {
-        return new ArrayList();
+        return new ArrayList<>();
     }
 
     @Override
@@ -138,9 +140,9 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
     @Override
     protected void alignTurret() {
         Vec3d pos = this.getTurretPos();
-        Vec3d barrel = new Vec3d(this.getBarrelLength(), 0, 0);
-        Vec3dUtil.rotateRoll(barrel, (float) this.rotationPitch);
-        barrel.rotateYaw((float) -(this.rotationYaw + Math.PI * 0.5));
+        Vec3NT barrel = new Vec3NT(this.getBarrelLength(), 0, 0);
+        barrel.rotateRollSelf(this.rotationPitch);
+        barrel.rotateYawSelf((float) -(this.rotationYaw + Math.PI * 0.5));
         /*
          * This is done to compensate for the barrel length, as this small deviation has a huge impact in both modes at longer ranges.
          * The consequence of this is that using the >before< angle of the barrel as an approximation can lead to problems at closer range,
@@ -201,14 +203,14 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
 
     public void spawnShell(ItemStack type) {
 
-        Vec3 pos = new Vec3(this.getTurretPos());
-        Vec3 vec = Vec3.createVectorHelper(this.getBarrelLength(), 0, 0);
-        vec.rotateAroundZ((float) -this.rotationPitch);
-        vec.rotateAroundY((float) -(this.rotationYaw + Math.PI * 0.5));
+        Vec3NT pos = new Vec3NT(this.getTurretPos());
+        Vec3NT vec = new Vec3NT(this.getBarrelLength(), 0, 0);
+        vec.rotateRollSelf((float) -this.rotationPitch);
+        vec.rotateYawSelf((float) -(this.rotationYaw + Math.PI * 0.5));
 
         EntityArtilleryShell proj = new EntityArtilleryShell(world);
-        proj.setPositionAndRotation(pos.xCoord + vec.xCoord, pos.yCoord + vec.yCoord, pos.zCoord + vec.zCoord, 0.0F, 0.0F);
-        proj.shoot(vec.xCoord, vec.yCoord, vec.zCoord, (float) getV0(), 0.0F);
+        proj.setPositionAndRotation(pos.x + vec.x, pos.y + vec.y, pos.z + vec.z, 0.0F, 0.0F);
+        proj.shoot(vec.x, vec.y, vec.z, (float) getV0(), 0.0F);
         proj.setTarget((int) tPos.x, (int) tPos.y, (int) tPos.z);
         proj.setType(type.getItemDamage());
 
@@ -218,8 +220,7 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
             proj.setCargo(new ItemStack(cargo));
         }
 
-        if (this.mode != MODE_CANNON)
-            proj.setWhistle(true);
+        if (this.mode != MODE_CANNON) proj.setWhistle(true);
 
         world.spawnEntity(proj);
 
@@ -259,10 +260,10 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
         if (!world.isRemote) {
             // mlbv: this is NOT how 1.7 deals with it, but I had to put it here to make the retraction work
             // I frankly don't know why
-            this.didJustShoot = false;
+            //this.didJustShoot = false;
             if (this.mode == MODE_MANUAL) {
                 if (!this.targetQueue.isEmpty()) {
-                    this.tPos = this.targetQueue.get(0);
+                    this.tPos = this.targetQueue.getFirst();
                 }
             } else {
                 this.targetQueue.clear();
@@ -292,9 +293,7 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
             }
 
             if (isOn() && hasPower()) {
-
-                if (tPos != null)
-                    this.alignTurret();
+                if (tPos != null) this.alignTurret();
             } else {
                 this.target = null;
                 this.tPos = null;
@@ -302,7 +301,7 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
 
             if (!isOn()) this.targetQueue.clear();
 
-            if (this.target != null && !target.isEntityAlive()) {
+            if (this.target != null && (!target.isEntityAlive() || !world.loadedEntityList.contains(target))) {
                 this.target = null;
                 this.tPos = null;
                 this.stattrak++;
@@ -316,8 +315,7 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
                 if (searchTimer <= 0) {
                     searchTimer = this.getDecetorInterval();
 
-                    if (this.target == null && this.mode != MODE_MANUAL)
-                        this.seekNewTarget();
+                    if (this.target == null && this.mode != MODE_MANUAL) this.seekNewTarget();
                 }
             } else {
                 searchTimer = 0;
@@ -330,6 +328,7 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
             this.power = Library.chargeTEFromItems(inventory, 10, this.power, this.getMaxPower());
 
             networkPackNT(250);
+            didJustShoot = false;
 
             if (casingDelay > 0) {
                 casingDelay--;
@@ -342,10 +341,8 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
             //this will fix the interpolation error when the turret crosses the 360° point
             if (Math.abs(this.lastRotationYaw - this.rotationYaw) > Math.PI) {
 
-                if (this.lastRotationYaw < this.rotationYaw)
-                    this.lastRotationYaw += Math.PI * 2;
-                else
-                    this.lastRotationYaw -= Math.PI * 2;
+                if (this.lastRotationYaw < this.rotationYaw) this.lastRotationYaw += Math.PI * 2;
+                else this.lastRotationYaw -= Math.PI * 2;
             }
         }
     }
@@ -366,10 +363,10 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
                 this.spawnShell(conf);
                 this.consumeAmmo(ModItems.ammo_arty);
                 world.playSound(null, pos.getX(), pos.getY(), pos.getZ(), HBMSoundHandler.jeremy_fire, SoundCategory.BLOCKS, 25.0F, 1.0F);
-                Vec3 pos = new Vec3(this.getTurretPos());
-                Vec3 vec = Vec3.createVectorHelper(this.getBarrelLength(), 0, 0);
-                vec.rotateAroundZ((float) -this.rotationPitch);
-                vec.rotateAroundY((float) -(this.rotationYaw + Math.PI * 0.5));
+                Vec3NT pos = new Vec3NT(this.getTurretPos());
+                Vec3NT vec = new Vec3NT(this.getBarrelLength(), 0, 0);
+                vec.rotateRollSelf((float) -this.rotationPitch);
+                vec.rotateYawSelf((float) -(this.rotationYaw + Math.PI * 0.5));
                 this.didJustShoot = true;
 
                 NBTTagCompound data = new NBTTagCompound();
@@ -377,11 +374,11 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
                 data.setString("mode", "largeexplode");
                 data.setFloat("size", 0F);
                 data.setByte("count", (byte) 5);
-                PacketThreading.createAllAroundThreadedPacket(new AuxParticlePacketNT(data, pos.xCoord + vec.xCoord, pos.yCoord + vec.yCoord, pos.zCoord + vec.zCoord), new TargetPoint(world.provider.getDimension(), pos.xCoord, pos.yCoord, pos.zCoord, 150));
+                PacketThreading.createAllAroundThreadedPacket(new AuxParticlePacketNT(data, pos.x + vec.x, pos.y + vec.y, pos.z + vec.z), new TargetPoint(world.provider.getDimension(), pos.x, pos.y, pos.z, 150));
             }
 
             if (this.mode == MODE_MANUAL && !this.targetQueue.isEmpty()) {
-                this.targetQueue.remove(0);
+                this.targetQueue.removeFirst();
                 this.tPos = null;
             }
         }
@@ -393,16 +390,10 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
     }
 
     @Override
-    protected Vec3d getCasingSpawnPos() {
-        return this.getTurretPos();
-    }
-
-    @Override
     public void handleButtonPacket(int value, int meta) {
         if (meta == 5) {
             this.mode++;
-            if (this.mode > 2)
-                this.mode = 0;
+            if (this.mode > 2) this.mode = 0;
 
             this.tPos = null;
             this.targetQueue.clear();
@@ -448,13 +439,7 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
         float yaw = (float) Math.toDegrees(rotationYaw);
         float pitch = (float) -Math.toDegrees(this.rotationPitch);
 
-        CasingCreator.composeEffect(world,
-                spawn,
-                yaw, pitch,
-                -0.6, 0.3, 0,
-                0.01, world.rand.nextFloat() * 20F - 10F, 0,
-                cachedCasingConfig.getName(),
-                true, 200, 1, 20);
+        CasingCreator.composeEffect(world, spawn, yaw, pitch, -0.6, 0.3, 0, 0.01, world.rand.nextFloat() * 20F - 10F, 0, cachedCasingConfig.getName(), true, 200, 1, 20);
 
         cachedCasingConfig = null;
     }
@@ -470,4 +455,41 @@ public class TileEntityTurretArty extends TileEntityTurretBaseArtillery implemen
         return new GUITurretArty(player.inventory, this);
     }
 
+    @Callback
+    @Optional.Method(modid = "opencomputers")
+    public Object[] addCoords(Context context, Arguments args) {
+        this.mode = MODE_MANUAL;
+        if (Math.sqrt(Math.pow(getPos().getX() - args.checkDouble(0), 2) + Math.pow(getPos().getY() - args.checkDouble(1), 2) + Math.pow(getPos().getZ() - args.checkDouble(2), 2)) >= this.getDecetorRange()) // check distance against range
+            return new Object[]{false};
+        targetQueue.add(new Vec3d(args.checkDouble(0), args.checkDouble(1), args.checkDouble(2)));
+        return new Object[]{true};
+    }
+
+    @Override
+    @Optional.Method(modid = "opencomputers")
+    public String[] methods() { // :vomit:
+        return new String[]{"setActive", "isActive", "getEnergyInfo", "getWhitelisted", "addWhitelist", "removeWhitelist", "setTargeting", "getTargeting", "hasTarget", "getAngle", "isAligned", "getCurrentTarget", "getTargetDistance", "addCoords"};
+    }
+
+    @Override
+    @Optional.Method(modid = "opencomputers")
+    public Object[] invoke(String method, Context context, Arguments args) throws Exception {
+        return switch (method) {
+            case "setActive" -> setActive(context, args);
+            case "isActive" -> isActive(context, args);
+            case "getEnergyInfo" -> getEnergyInfo(context, args);
+            case "getWhitelisted" -> getWhitelisted(context, args);
+            case "addWhitelist" -> addWhitelist(context, args);
+            case "removeWhitelist" -> removeWhitelist(context, args);
+            case "setTargeting" -> setTargeting(context, args);
+            case "getTargeting" -> getTargeting(context, args);
+            case "hasTarget" -> hasTarget(context, args);
+            case "getAngle" -> getAngle(context, args);
+            case "isAligned" -> isAligned(context, args);
+            case "getCurrentTarget" -> getCurrentTarget(context, args);
+            case "getTargetDistance" -> getTargetDistance(context, args);
+            case "addCoords" -> addCoords(context, args);
+            default -> throw new NoSuchMethodException();
+        };
+    }
 }
